add swagger docs to endpoints
